# verosnacks

./: .gitignore  Containerfile  LICENSE  README.md  build.sh  compose.yaml  entrypoint.sh  manage.py  pyproject.toml  railway.json
app/: admin.py  cart.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_testimonial_review.py  0003_order_country.py  0004_remove_testimonial_image.py
app/templatetags/: cart_tags.py
app/views/: __init__.py  cart.py  checkout.py  shop.py  users.py
frontend/static/js/: app.js
frontend/static_src/: package.json
frontend/static_src/src/: styles.css
frontend/templates/account/: login.html  order_list.html  profile_edit.html  register.html  register_done.html
frontend/templates/frontend/: base.html  contact.html  index.html  our_story.html
frontend/templates/shop/: cart.html  order_create.html  payment_canceled.html  payment_completed.html  payment_process.html  product_detail.html  product_list.html
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudfront/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
verosnacks/: asgi.py  celery.py  deployment_settings.py  settings.py  urls.py  wsgi.py
(+26 files in other folders)
