[project]
name = "verosnacks"
version = "0.1.0"
description = "Official Site for Vero"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "cloudinary>=1.44.1",
    "cookiecutter>=2.6.0",
    "crispy-tailwind>=1.0.3",
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-browser-reload>=1.21.0",
    "django-cloudinary-storage>=0.3.0",
    "django-crispy-forms>=2.5",
    "django-prometheus>=2.4.0",
    "django-storages>=1.14.6",
    "django-tailwind>=4.4.1",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "honcho>=2.0.0",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.3.2",
    "redis>=7.1.0",
    "stripe>=14.1.0",
    "whitenoise[brotli]>=6.11.0",
]
